TFP-3924: Hensyntar andeler som splittes mellom behandlinger (#1486)
* TFP-3924: Hensyntar andeler som splittes mellom behandlinger